08/nginx-service-nport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nport
spec:
  selector:
    app: nginx
  ports:
    - name: nginx-nport
      protocol: TCP
      port: 80
      nodePort: 30001
  type: NodePort
