08/nginx-service-tls.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-tls
spec:
  selector:
    app: nginx
  ports:
    - name: nginx-tls
      protocol: TCP
      port: 443
      targetPort: 80
