08/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: netotest.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-tls
            port:
              number: 443
  tls:
    - hosts:
      - netotest.local
      secretName: nginx-web
  ingressClassName: nginx
